--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.16.3)
 
-add_executable(database-cli main.cpp)
+add_executable(mydatabase-cli main.cpp)
 
 include_directories(${CMAKE_SOURCE_DIR})
 
-target_link_libraries(database-cli PRIVATE database)
+target_link_libraries(mydatabase-cli PRIVATE mydatabase)
 
-target_compile_features(database-cli PRIVATE cxx_std_17)
+target_compile_features(mydatabase-cli PRIVATE cxx_std_17)
